<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uke</groupId>
    <artifactId>jvprj2025</artifactId>
    <version>888</version>
    <packaging>jar</packaging>

    <modules>

    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <nacos.starter.version>2.2.5.RELEASE</nacos.starter.version>
        <nacos.discovery.starter.version>2.2.5.RELEASE</nacos.discovery.starter.version>
        <druid.starter.version>1.2.15</druid.starter.version>
        <springboot.starter.version>2.2.2.RELEASE</springboot.starter.version>
        <springboot.admin.starter.version>2.2.2</springboot.admin.starter.version>
        <mybatis.starter.version>2.1.0</mybatis.starter.version>
        <mybatis.mapper.starter.version>2.1.5</mybatis.mapper.starter.version>
        <pagehelper.version>5.1.11</pagehelper.version>
        <dubbo.starter.version>2.7.7</dubbo.starter.version>
        <redis.starter.version>2.2.2.RELEASE</redis.starter.version>
        <rabbitmq.starter.version>2.2.2.RELEASE</rabbitmq.starter.version>
        <elasticsearch.starter.version>2.2.2.RELEASE</elasticsearch.starter.version>
        <mongodb.starter.version>2.2.2.RELEASE</mongodb.starter.version>
        <lombok.version>1.18.8</lombok.version>
        <guava.version>28.1-jre</guava.version>
        <fastjson.version>1.2.83</fastjson.version>
        <mysql.connector.version>8.0.17</mysql.connector.version>
        <slf4j.version>1.7.30</slf4j.version>
        <spring.version>5.2.2.RELEASE</spring.version>
        <xxljob.version>2.1.2</xxljob.version>
        <aspect.version>1.8.13</aspect.version>
        <kotlin.version>2.0.21</kotlin.version>
    </properties>

    <repositories>
        <!-- 添加额外的仓库 -->
        <repository>
            <id>0110.be repository</id>
            <url>https://mvn.0110.be/releases</url>
        </repository>
        <repository>
            <id>opencv-repo</id>
            <url>https://raw.github.com/opencv/opencv/master</url>
        </repository>
    </repositories>
    <dependencies>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.3</version>
            <scope>test</scope>
        </dependency>

        <!-- MockK（用于模拟对象，类似 Mockito） -->
        <dependency>
            <groupId>io.mockk</groupId>
            <artifactId>mockk</artifactId>
            <version>1.13.4</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.9.1</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20210307</version>
        </dependency>

            <!-- Spring Core（包含 SpEL）-->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>6.2.1</version>
            </dependency>



        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-expression</artifactId>
            <version>6.2.1</version>
        </dependency>


        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
            <version>6.4.0.Final</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.6.5.Final</version>

        </dependency>



        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.43.2.2</version> <!-- Use the latest version available -->
        </dependency>

<!--
        <dependency>
            <groupId>com.example</groupId>
            <artifactId>your-artifact-id</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libjar/ormJpaAt-88.jar</systemPath>
        </dependency>
-->


        <!-- Hibernate EntityManager (if you are using JPA) -->


        <!-- Optional: Hibernate Validator (if you need validation support) -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>6.2.0.Final</version> <!-- Use the latest version -->
        </dependency>

        <!-- Optional: JPA (if you want to use Jakarta Persistence API) -->
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version> <!-- Or use the version corresponding to your JPA implementation -->
        </dependency>

        <dependency>
            <groupId>p6spy</groupId>
            <artifactId>p6spy</artifactId>
            <version>3.9.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javax.jdo/jdo-api -->
        <dependency>
            <groupId>javax.jdo</groupId>
            <artifactId>jdo-api</artifactId>
            <version>3.2.1</version>
        </dependency>

        <!-- MySQL JDBC Driver -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version> <!-- Use the latest version -->
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.datanucleus/datanucleus-api-jdo -->
        <dependency>
            <groupId>org.datanucleus</groupId>
            <artifactId>datanucleus-api-jdo</artifactId>
            <version>6.0.4</version>
        </dependency>

        <dependency>
            <groupId>com.example</groupId>
            <artifactId>your-artifact-id</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libjar/mysql-connector-j-8.2.0.jar</systemPath>
        </dependency>
        <!-- JPA 3.1 API -->
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version>

        </dependency>


        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version> <!-- Use the latest version available -->
        </dependency>



        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
            <version>2.0.44</version> <!-- 请使用最新版本 -->
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test</artifactId>
            <version>2.1.0</version>
        </dependency>

    </dependencies>




    <build>

        <sourceDirectory>src</sourceDirectory> <!-- Custom source directory -->
        <plugins>



            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>



            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <source>src/main/java</source>
                                <source>target/generated-sources/annotations</source>
                                <source>asrc</source>
                            </sourceDirs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>1.8</jvmTarget>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <release>23</release> <!-- Set your Java version -->
                    <compilerArgs>
                        <arg>--enable-preview</arg> <!-- Enable preview features -->
                    </compilerArgs>
                </configuration>
            </plugin>

            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>23</source>
                    <target>23</target>

                    <fork>true</fork>
                    <compilerArgs>__enable-preview</compilerArgs>
                </configuration>
            </plugin>
    -->
        </plugins>
    </build>

</project>